--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ install:
       export BUILD_ON_WINDOWS=1;
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
       export CFLAGS=-Idlfcn-win32;
+      export LDFLAGS=-Ldlfcn-win32 -lpsapi;
     fi;
 
 before_script:
