--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ install:
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
       ls dlfcn-win32
       export CFLAGS=-Idlfcn-win32;
-      export LDFLAGS="-Ldlfcn-win32 -lpsapi";
+      export LDFLAGS="-Ldlfcn-win32 -lpsapi dlfcn-win32/libdl.a";
     fi;
 
 before_script:
