--- a/.travis.yml
+++ b/.travis.yml
@@ -50,9 +50,9 @@ install:
       choco install make;
       export BUILD_ON_WINDOWS=1;
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
-      ls dlfcn-win32
-      export CFLAGS=-Idlfcn-win32;
-      export LDFLAGS="-Ldlfcn-win32 -lpsapi dlfcn-win32/libdl.a";
+      ls dlfcn-win32;
+      export CFLAGS="$CFLAGS -Idlfcn-win32";
+      export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi dlfcn-win32/libdl.a";
     fi;
 
 before_script:
