--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ compiler:
 install:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi;
   - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ]; then 
-      choco install make;
+      choco install make valgrind;
       export BUILD_ON_WINDOWS=1;
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
       ls dlfcn-win32;
