--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,9 @@ install:
   - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ]; then 
       choco install make;
       export BUILD_ON_WINDOWS=1;
+      printf "\033[31m%s033[0m\n" $(which valgrind);
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
-      which valgrind;
-      export VALGRIND;
+      export VALGRIND=;
       export CFLAGS="$CFLAGS -Idlfcn-win32";
       export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi dlfcn-win32/libdl.a";
       export LIBS="$LIBS -lpsapi";
