--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
       export BUILD_ON_WINDOWS=1;
       printf "\033[31m%s033[0m\n" $(which valgrind);
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
-      export VALGRIND=;
+      export VALGRIND="NO_VALGRIND";
       export SEVERITY=2;
       export CFLAGS="$CFLAGS -Idlfcn-win32";
       export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi dlfcn-win32/libdl.a";
