--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,6 @@ install:
   - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ]; then 
       choco install make;
       export BUILD_ON_WINDOWS=1;
-      printf "\033[31m%s033[0m\n" $(which valgrind);
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=2;
@@ -78,7 +77,7 @@ before_script:
 script:
   - if [ $(uname) = "Linux" ] || [ $(uname) = "Darwin" ];
     then make && make test;
-    else make.exe && make.exe test;
+    else make.exe && make.exe test && ./gwion; ./gwion example/array.gw;
     fi;
 
 after_success:
