--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,8 @@ install:
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=1;
       export CFLAGS="$CFLAGS -Idlfcn-win32";
-      export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi dlfcn-win32/libdl.a";
-      export LIBS="$LIBS -lpsapi -shared -fPIC -rdynamic";
+      export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi -shared -fPIC dlfcn-win32/libdl.a";
+      export LIBS="$LIBS -lpsapi -shared -fPIC";
     fi;
 
 before_script:
