--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ install:
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=1;
       export CFLAGS="$CFLAGS -Idlfcn-win32";
-      export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi -shared -fPIC dlfcn-win32/libdl.a -Wl,--export-all -Wl,--enable-auto-import";
+      export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi -shared -fPIC dlfcn-win32/libdl.a -Wl,--export-all -Wl,--enable-auto-import -Wl,--out-implib,libgwion.a";
       export LIBS="$LIBS -lpsapi -shared -fPIC";
     fi;
 
