--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
       export BUILD_ON_WINDOWS=1;
       git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
       export VALGRIND="NO_VALGRIND";
-      export SEVERITY=1;
+      export SEVERITY=2;
       export CFLAGS="$CFLAGS -Idlfcn-win32";
       export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi -shared -fPIC dlfcn-win32/libdl.a -Wl,--export-all -Wl,--enable-auto-import -Wl,--out-implib,libgwion.a";
       export LIBS="$LIBS -lpsapi -shared -fPIC";
@@ -77,7 +77,7 @@ before_script:
 script:
   - if [ $(uname) = "Linux" ] || [ $(uname) = "Darwin" ];
     then make && make test;
-    else make.exe && make.exe test && ls;
+    else make.exe && make.exe test;
     fi;
 
 after_success:
