--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ install:
 
 before_script:
   - git submodule update --init util ast;
-  - if [ $(uname) = "Darwin" ]; export SEVERITY=1; fi;
+  - if [ $(uname) = "Darwin" ]; then export SEVERITY=1; fi;
   - mkdir -p "$GWION_ADD_DIR" "$GWION_TEST_DIR"
 
 script:
