--- a/.travis.yml
+++ b/.travis.yml
@@ -44,11 +44,9 @@ install:
   - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ]; then 
       choco install make;
       export BUILD_ON_WINDOWS=1;
-      git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && ./configure && make.exe && cd ..;
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=1;
-      export CFLAGS="$CFLAGS -Idlfcn-win32";
-      export LDFLAGS="$LDLAGS -Ldlfcn-win32 -lpsapi -shared -fPIC dlfcn-win32/libdl.a -Wl,--export-all -Wl,--enable-auto-import -Wl,--out-implib,libgwion.a";
+      export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import -Wl,--out-implib,libgwion.a";
       export LIBS="$LIBS -lpsapi -shared -fPIC";
     fi;
 
