--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 #sudo: required
 os:
   - linux
-  - windows
+#  - windows
   - osx
 
 addons:
@@ -33,8 +33,8 @@ env:
 
 matrix:
   allow_failures:
-#   - compiler: clang
-   - os: windows
+   - compiler: clang
+#   - os: windows
 
 compiler:
   - gcc
