--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ env:
 
 matrix:
   allow_failures:
-   - compiler: clang
-#   - os: windows
+#   - compiler: clang
+   - os: windows
 
 compiler:
   - gcc
@@ -47,7 +47,8 @@ install:
       export BUILD_ON_WINDOWS=1;
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=1;
-      export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import -Wl,--out-implib,libgwion.a";
+#      export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import -Wl,--out-implib,libgwion.a";
+      export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import -Wl";
       export LIBS="$LIBS -lpsapi -shared -fPIC";
     fi;
 
