:wrench: Travis testing (fix windows/clang ssize_t)

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,10 @@ before_script:
 script:
   - if [ $(uname) = "Linux" ] || [ $(uname) = "Darwin" ];
     then make && make test;
-    else make.exe && make.exe test;
+    else if[ $CC = clang]
+    then CFLAGS+="-Dssize_t=SSIZE_T"
+    make.exe && make.exe test;
+    fi
     fi;
 
 git:
