:wrench: Travis testing (fix windows/clang ssize_t)

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,9 +60,9 @@ script:
   - if [ $(uname) = "Linux" ] || [ $(uname) = "Darwin" ];
     then make && make test;
     else
-      if[ $CC = clang]
-      then CFLAGS+="-Dssize_t=SSIZE_T"
-      fi
+      if[ $CC = clang];
+      then CFLAGS+="-Dssize_t=SSIZE_T";
+      fi;
     make.exe && make.exe test;
     fi;
 
