:wrench: Travis testing (fix windows/clang ssize_t)

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ script:
     then make && make test;
     else {
       if [ "$CC" = "clang" ];
-      then export CFLAGS+="-DSSIZE_T=ssize_t";
+      then export CFLAGS+="-DSSIZE_T=ssize_t -D_USE_MATH_DEFINES";
       fi;
       make.exe && make.exe test;
     }
