:wrench: Investigate plug fault on Osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,11 @@ script:
       make.exe && make.exe test;
     }
     fi;
+  - if [ $(uname) = "Darwin" ];
+    then cd tests/import;
+    NAME=static_string make;
+    valgrind ../../gwion-p. static_string.gw;
+    fi;
 
 git:
   submodules: false
