:wrench: Investigate plug fault on Osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,8 +68,9 @@ script:
     fi;
   - if [ $(uname) = "Darwin" ];
     then cd tests/import;
+    brew install valgrind 
     NAME=static_string make;
-    valgrind ../../gwion-p. static_string.gw;
+    valgrind ../../gwion -p. static_string.gw;
     fi;
 
 git:
