:art: Make docs part of test [BCH]

--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -20,6 +20,7 @@ languages:
        - fake_entry
     test:
       include:
+        - /docs/.*/.*\.mdr
         - /examples/.*/.*\.gw
         - /tests/.*/.*\.gw
 
