:book: More of the same [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -42,6 +42,8 @@
     }
   ],
   "contributorsPerLine": 7,
+  "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-brightgreen.svg](#contributors)"
+  "contributorTemplate": <%= "<%=contributions %><br /><%= avatarBlock %>"
   "projectName": "Gwion",
   "projectOwner": "fennecdjay",
   "repoType": "github",
