--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -42,7 +42,7 @@
     }
   ],
   "contributorsPerLine": 7,
-  "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-brightgreen.svg](#contributors)"
+  "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg](#contributors)"
   "contributorTemplate": <%= "<%=contributions %><br /><%= avatarBlock %>"
   "projectName": "Gwion",
   "projectOwner": "fennecdjay",
