:wrench: Travis coverage (typo)

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ compiler:
 
 install:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then
-        pip install urllib3[secure]
+        pip install --user urllib3[secure]
         pip install --user cpp-coveralls;
         export COVERAGE=1;
         fi;
@@ -77,7 +77,7 @@ script:
 
 after_success:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then
-      COVERALLS_REPO_TOKEN=OdYyiJMdUIolVNqWHX5pe3QERNcBv7t2p  coveralls -i include -i src/ --gcov-options '\-lp' -b.;
+      COVERALLS_REPO_TOKEN=OdYyiJMdUIolVNqWHX5pe3QERNcBv7t2p coveralls -i include -i src/ --gcov-options '\-lp' -b.;
     fi
 
 git:
