--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ env:
 
 matrix:
   allow_failures:
-#   - compiler: clang
-   - os: windows
+   - compiler: clang
+#   - os: windows
 
 compiler:
   - gcc
