--- a/.travis.yml
+++ b/.travis.yml
@@ -83,5 +83,11 @@ after_success:
       COVERALLS_REPO_TOKEN=OdYyiJMdUIolVNqWHX5pe3QERNcBv7t2p coveralls -i include -i src/ --gcov-options '\-lp' -b.;
     fi
 
+after_failure:
+  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.7  ]; then
+      make clean; DEBUG_STACK=1 make;
+      ./gwion tests/tree/array_tests.gw
+    fi
+
 git:
   submodules: false
