--- a/.travis.yml
+++ b/.travis.yml
@@ -52,11 +52,11 @@ install:
       export BUILD_ON_WINDOWS=1;
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=1;
-      if [ $(CC) = "gcc" ];
-      then export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
-      else export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC";
-      fi;
-      export LIBS="$LIBS -lpsapi -shared -fPIC";
+#      if [ $(CC) = "gcc" ];
+#      then export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
+      export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
+      export LIBS="$LIBS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
+#      export LIBS="$LIBS -lpsapi -shared -fPIC";
     fi;
 
 before_script:
