--- a/.travis.yml
+++ b/.travis.yml
@@ -44,13 +44,18 @@ install:
         pip install --user urllib3[secure];
         pip install --user cpp-coveralls;
         fi;
+#  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi;
   - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ]; then 
       choco install make;
       export BUILD_ON_WINDOWS=1;
       export VALGRIND="NO_VALGRIND";
       export SEVERITY=1;
-      export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
-      export LIBS="$LIBS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
+      if [ $(CC) = "gcc" ];
+      then export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC -Wl,--export-all -Wl,--enable-auto-import";
+      else export LDFLAGS="$LDLAGS -lpsapi -shared -fPIC";
+      fi;
+      export LIBS="$LIBS -lpsapi -shared -fPIC";
+    fi;
 
 before_script:
   - git submodule update --init util ast;
